Improve code [port to Kotlin]